Fixes Update Message Visibility Bug

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -53,3 +53,7 @@ body {
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+.hidden {
+    display: none;
+}
